ConsoleApp/Program.cs kész

--- a/sztf-szakirany_felevesproject/ConsoleApp.csproj
+++ b/sztf-szakirany_felevesproject/ConsoleApp.csproj
@@ -6,4 +6,11 @@
     <RootNamespace>sztf_szakirany_felevesproject</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Logic\Logic.csproj" />
+    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Repository\Repository.csproj" />
+  </ItemGroup>
+
 </Project>
